--- a/bcmd/README
+++ b/bcmd/README
@@ -6,6 +6,7 @@
 #  This file is a derivative work from SYSeg (https://gitlab.com/monaco/syseg)
 #  and contains modifications carried out by the following author(s):
 #  Pedro Lucas Castro de Andrade <pedroandrade@usp.br>
+#  Alexandre Lopes Ferreira Dias dos Santos <alelopfer@usp.br>
 
  BootCmd : Boot Command
  ==============================
